Bug 443151 - Some fill pattern cannot be selected.
Summary: Some fill pattern cannot be selected.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 5.0.0-beta1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords:
: 443692 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-09-30 07:16 UTC by healer.harie
Modified: 2021-10-14 14:04 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
bug presentation (1.16 MB, video/mp4)
2021-09-30 07:16 UTC, healer.harie
Details

Note You need to log in before you can comment on or make changes to this bug.
Description healer.harie 2021-09-30 07:16:00 UTC
Created attachment 142023 [details]
bug presentation

SUMMARY
When selecting a pattern at "Fill Pattern", some cannot be selected (see attachment).

STEPS TO REPRODUCE
1. At "Fill pattern", select a pattern (Preferably, a dotted screen tone).

OBSERVED RESULT
Pattern cannot be selected.

EXPECTED RESULT
Pattern must be selected.

SOFTWARE/OS VERSIONS
Windows: 10
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Krita

 Version: 5.0.0-beta1 (git 0986afa)
 Languages: en_US, en
 Hidpi: false

Qt

  Version (compiled): 5.12.11
  Version (loaded): 5.12.11

OS Information

  Build ABI: x86_64-little_endian-llp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: winnt
  Kernel Version: 10.0.15063
  Pretty Productname: Windows 10 (10.0)
  Product Type: windows
  Product Version: 10

OpenGL Info
 
  Vendor:  "Google Inc." 
  Renderer:  "ANGLE (Intel(R) HD Graphics Direct3D11 vs_5_0 ps_5_0)" 
  Version:  "OpenGL ES 3.0 (ANGLE 2.1.0.57ea533f79a7)" 
  Shading language:  "OpenGL ES GLSL ES 3.00 (ANGLE 2.1.0.57ea533f79a7)" 
  Requested format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
  Current format:    QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples 0, swapBehavior QSurfaceFormat::DefaultSwapBehavior, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::NoProfile) 
     Version: 3.0
     Supports deprecated functions false 
     is OpenGL ES: true 

QPA OpenGL Detection Info 
  supportsDesktopGL: true 
  supportsAngleD3D11: true 
  isQtPreferAngle: true 

Hardware Information

  GPU Acceleration: auto
  Memory: 1946 Mb
  Number of Cores: 4
  Swap Location: C:/Users/User6/AppData/Local/Temp

Current Settings

  Current Swap Location: C:/Users/User6/AppData/Local/Temp
  Current Swap Location writable: true
  Undo Enabled: true
  Undo Stack Limit: 30
  Use OpenGL: true
  Use OpenGL Texture Buffer: true
  Disable Vector Optimizations: false
  Disable AVX Optimizations: false
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 900
  Use Backup Files: true
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Backup Location writable: false
  Use Win8 Pointer Input: false
  Use RightMiddleTabletButton Workaround: false
  Levels of Detail Enabled: false
  Use Zip64: false


Display Information
Number of screens: 1
	Screen: 0
		Name: \\.\DISPLAY1
		Depth: 32
		Scale: 1
		Resolution in pixels: 1280x800
		Manufacturer: 
		Model: 
		Refresh Rate: 60
Comment 1 Halla Rempt 2021-09-30 08:15:28 UTC
sorry, but from the video it isn't clear which patterns you actually have problems with. What are the names of those patterns?
Comment 2 healer.harie 2021-09-30 09:29:48 UTC
Here is a rundown:

  1 Canvas 04
  2 Cross01.pat
  3 Cross02.pat
  4 Cross03.pat
  5 Cross04.pat
  6 Cross05.pat
  7 Cross06.pat
  8 Cross07.pat
  9 DITH 0202 CLUS
 10 DITH 0202 GEN
 11 DITH 0202 HORZ
and more...

As far as I've seen, the problem only persist on patterns with extensions, `.pat` and those without extension. The problem doesn't persist on `.png` patterns (as far as I've seen.)
Comment 3 Halla Rempt 2021-09-30 10:53:55 UTC
Hm... All of those work fine for me. Let me boot up my windows laptop to see whether it's OS specific.
Comment 4 Halla Rempt 2021-09-30 11:07:00 UTC
Ah, I know now, this bug has been fixed since 5.0b1 The fix is in the nightly builds, and will be in beta 2
Comment 5 healer.harie 2021-09-30 11:21:33 UTC
Can you confirm at what commit hash this has been fixed?

I tried downloading build 1251 (https://binary-factory.kde.org/job/Krita_Stable_Windows_Build/1251/) and installed it but the problem still persist.
Comment 6 Halla Rempt 2021-09-30 11:35:04 UTC
Sorry, you're right. I was testing with the wrong build. And it is, weirdly enough, a Windows-only issue. On macOS otoh, the .pat patters aren't even loaded at all.
Comment 7 Halla Rempt 2021-09-30 11:56:41 UTC
Git commit 6e120fbfc52ab67932c9b53f26ed75a0e5472cfb by Halla Rempt.
Committed on 30/09/2021 at 11:56.
Pushed by rempt into branch 'master'.

Check more possible *.pat mimetypes

This should help loading *.pat files on systems with an older
shared-mime-info database that doesn't yet contain the image/x-gimp-pat
mimetype.

M  +1    -1    libs/koplugin/KisMimeDatabase.cpp
M  +6    -13   libs/pigment/resources/KoPattern.cpp

https://invent.kde.org/graphics/krita/commit/6e120fbfc52ab67932c9b53f26ed75a0e5472cfb
Comment 8 Halla Rempt 2021-09-30 11:58:42 UTC
Git commit 6ea0788a163856cd854fc2cfa4f62468958b9e7f by Halla Rempt.
Committed on 30/09/2021 at 11:58.
Pushed by rempt into branch 'krita/5.0'.

Check more possible *.pat mimetypes

This should help loading *.pat files on systems with an older
shared-mime-info database that doesn't yet contain the image/x-gimp-pat
mimetype.
(cherry picked from commit 6e120fbfc52ab67932c9b53f26ed75a0e5472cfb)

M  +1    -1    libs/koplugin/KisMimeDatabase.cpp
M  +6    -13   libs/pigment/resources/KoPattern.cpp

https://invent.kde.org/graphics/krita/commit/6ea0788a163856cd854fc2cfa4f62468958b9e7f
Comment 9 healer.harie 2021-09-30 12:21:43 UTC
I suppose this has been fixed? I'll try waiting for the next week build to try this (which should also contain other fixes).
Comment 10 Halla Rempt 2021-09-30 12:33:03 UTC
I hope this has fixed the issue, but I'm also waiting for the windows build.
Comment 11 Halla Rempt 2021-09-30 13:19:50 UTC
Hm, it hasn't on macOS, I need to investigate more.
Comment 12 anno2300 2021-10-02 15:26:42 UTC
I found a new bug maybe. But i looks like related to this bug and i wanna ad a comment first here.

I tested it on the nigthly krita-nightly_96794d1.dmg on my macOS Big Sur.

All patterns with the extension .pat aren’t showed correctly, they are just blank in the Library. But you have to undelete it first in the Resource Manager. And the Resource Manager doesn’t show it for local folders in addition, but in the local folders are all .pat patterns. Also in the Krita 4 and 3 default ressources.

In summary:
All .pat are blank (White)
All .pat arent showed in the local folder in resource manager, also not as deleted, but in the beta1, they are shown normaly, also in the patter library.
All .pat are marked as deleted in the Krita 4 default resources (same as beta1)
All .pat aren't marked as deleted in Krita 3 default resources, but they are marked as deleted in the beta1.

I hope this helps, if it is a new bug, then reply and i create a new bug report.
Comment 13 healer.harie 2021-10-08 02:33:13 UTC
Hello Halla Rempt,

  I tried Krita 5.0.0 379571f (build 1260) but the problem still persist. Did you
able to select those patterns on your Windows machine?
Comment 14 Halla Rempt 2021-10-08 11:54:37 UTC
I couldn't test on windows, I'm now testing a new fix on macos
Comment 15 Halla Rempt 2021-10-08 11:56:43 UTC
Git commit c15afac0df84573a68231cedd7a7339227dc4172 by Halla Rempt.
Committed on 08/10/2021 at 11:54.
Pushed by rempt into branch 'krita/5.0'.

Also check for the .pat suffix

Older mimedatabases don't know about application/x-gimp-pattern,
so QMimeDatabase cannot check for this mimetype using the byte
array contents

M  +4    -2    libs/pigment/resources/KoPattern.cpp

https://invent.kde.org/graphics/krita/commit/c15afac0df84573a68231cedd7a7339227dc4172
Comment 16 Halla Rempt 2021-10-08 11:57:00 UTC
Git commit 76eb5e4fe96d69deefb12c962f1e1d735b477e90 by Halla Rempt.
Committed on 08/10/2021 at 11:56.
Pushed by rempt into branch 'master'.

Also check for the .pat suffix

Older mimedatabases don't know about application/x-gimp-pattern,
so QMimeDatabase cannot check for this mimetype using the byte
array contents
(cherry picked from commit c15afac0df84573a68231cedd7a7339227dc4172)

M  +4    -2    libs/pigment/resources/KoPattern.cpp

https://invent.kde.org/graphics/krita/commit/76eb5e4fe96d69deefb12c962f1e1d735b477e90
Comment 17 healer.harie 2021-10-11 10:16:18 UTC
Thank you much. Works like a charm on fa4ad10e8a (build 1263).
Comment 18 Halla Rempt 2021-10-14 14:04:59 UTC
*** Bug 443692 has been marked as a duplicate of this bug. ***