Also check for the .pat suffix

Older mimedatabases don't know about application/x-gimp-pattern,
so QMimeDatabase cannot check for this mimetype using the byte
array contents

BUG:443151